--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
                 <div class="boxlottery">
                     <ul class="listlot">
                         <li><img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot1.png" alt="" />
-                            <p class="lotname">觉醒版 QBZ-03-王者蔷薇</p>
+                            <p class="lotname">王亿</p>
                         </li>
                         <li><img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot2.png" alt="" />
-                            <p class="lotname">王者-春</p>
+                            <p class="lotname">秦限</p>
                         </li>
                         <li>
                             <img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot3.png" alt="" />
-                            <p class="lotname">星神-枪娘默 皮肤（不可交易）</p>
+                            <p class="lotname">QBZ03-SO  兑换券</p>
                             <span class="tagesbq tagesbq1 sp">全新首发</span>
-                            <span class="tagesbq tagesbq2 sp">枪娘限定</span>
+                            <span class="tagesbq tagesbq2 sp">兑换券</span>
                         </li>
                         <li>
                             <img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot4.png" alt="" />
-                            <p class="lotname">斯泰尔-枪娘暗刃</p>
+                            <p class="lotname">M200-幻神 恶人狙击枪（皮肤）</p>
                             <span class="tagesbq tagesbq1 sp">全新首发</span>
-                            <span class="tagesbq tagesbq2 sp">枪娘限定</span>
+                            <span class="tagesbq tagesbq2 sp">幻神皮肤</span>
                         </li>
                         <li><img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot5.png" alt="" />
-                            <p class="lotname">毁灭耀金皮肤（不可交易）</p>
+                            <p class="lotname">英雄级高级栏位通用扩展券</p>
                         </li>
                         <li><img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot6.png" alt="" />
                             <p class="lotname">积分x3</p>
