--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
                 <div class="boxlottery">
                     <ul class="listlot">
-                        <li><img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot1.png" alt="" />
+                        <li><img src="//img2.baidu.com/it/u=1577766990,2229088449&fm=253&fmt=auto&app=120&f=JPEG?w=801&h=500" alt="" />
                             <p class="lotname">王亿</p>
                         </li>
-                        <li><img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot2.png" alt="" />
+                        <li><img src="//i2.hdslb.com/bfs/archive/b57d363b40bdad71864402f3d591d03da53dccbf.jpg" alt="" />
                             <p class="lotname">秦限</p>
                         </li>
                         <li>
