--- a/index.html
+++ b/index.html
@@ -7,49 +7,49 @@
     <div class="popup" id="popup">
         <!-- 弹窗内容 -->
         <h3>抽中的物品：</h3>
-          < Ul 身份证 = "prizeList"  >  </ Ul >
-          < 按钮 点击 = " 隐藏者 ( ) ;"  > 关闭 </ 按钮 >
-          < h3 > (仅供参考) </ h3 >
-      </ 分 >
-      < 分 等级 = "overlay"   身份证 = "overlay1"  >  </ 分>
-     分 等级 = "popup"  身份证 = "popup1">
+                 <ul id="prizeList"></ul>
+        <button onclick="hidePopup();">关闭</button>
+        <h3>(仅供参考)</h3>
+    </div>
+    <div class="overlay" id="overlay1"></div>
+    <div class="popup" id="popup1">
         <!-- 弹窗内容 -->
-         < h3 > 恭喜你获得： </ h3 >
-         < Ul 身份证 = "prizeList1" > </ Ul >
-         < 按钮 点击 = " 杀螨动物1 ( ) ;" > 关闭 </ 按钮 >
-         < h3 > (仅供参考) </ h3 >
-     </ 分 >
-     < 梅塔 查理特 = "UTF-8"  />
-     < 梅塔 满意的 = "all"  姓名 = "robots" >
-     < 梅塔 满意的 = "Tencent-CP"  姓名 = "author"  />
-     < 梅塔 满意的 = "Tencent"  姓名 = "Copyright"  />
-     < 标题 > 穿越火线-枪娘暗刃&默登场-穿越火线官方网站-腾讯游戏 </ 标题 >
-     < 连接 恢复 = "stylesheet"  类型 = "文本/CSS"  高参考值 = "index.css"  />
+        <h3>恭喜你获得：</h3>
+        <ul id="prizeList1"></ul>
+        <button onclick="hidePopup1();">关闭</button>
+        <h3>(仅供参考)</h3>
+    </div>
+    <meta charset="UTF-8" />
+    <meta content="all" name="robots">
+    <meta content="Tencent-CP" name="author" />
+    <meta content="Tencent" name="Copyright" />
+    <title>穿越火线-枪娘暗刃&默登场-穿越火线官方网站-腾讯游戏</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
 
- < 身体 >
-     < 分 等级 = "wrap1" >
-         < class="container">
-             < 分 等级 = "box1" >
-                 < h2 等级 = "主题1特别方案数据库" > 枪娘抽奖 </ h2 >
-                 < 分 等级 = "btnbox" >
-                      < A 高参考值 = "javascript:void ()"   等级 = "btnbuy1 sp"
-                          点击 = " Pttsendclickx ( 'btn' , 'btnbuy1' , '购买' ) ;"  >  </ A >  <!--添加类名on数字隐藏-->
-                     < A 高参考值 = "javascript:void ()"  等级 = "btnbuy2 sp"  点击 = " Pttsendclickx ( 'btn' , 'btnbuy2' , '购买' ) ;" > </ A > < A 高参考值 = "javascript:void ()"  等级 = "btnbuy2 sp"  点击 = " Pttsendclickx ( 'btn' , 'btnbuy2' , '购买' ) ;" ></ &gn;
-                     < A 高参考值 = "javascript:void ()"  等级 = "btnbuy3 sp" <a 
-                         点击 = " Pttsendclickx ( 'btn' , 'btnbuy3' , '购买' ) ;" > </ A > <!--添加类名on数字隐藏-->onclick="PTTSendClickX('btn','btnbuy3','购买');"></a><!--添加类名on数字隐藏-->
+<body>
+    <div class="wrap1">
+        <class="container">
+            <div class="box1">
+                <h2 class="tit1 sp db">枪娘抽奖</h2>
+                <div class="btnbox">
+                    <a href="javascript:void ()" class="btnbuy1 sp"
+                        onclick="PTTSendClickX('btn','btnbuy1','购买');"></a><!--添加类名on数字隐藏-->
+                    <a href="javascript:void ()" class="btnbuy2 sp" onclick="PTTSendClickX('btn','btnbuy2','购买');"></a>
+                    <a href="javascript:void ()" class="btnbuy3 sp"
+                        onclick="PTTSendClickX('btn','btnbuy3','购买');"></a><!--添加类名on数字隐藏-->
                 </div>
 
-                <div class="boxlottery"><div class="boxlottery">
-                    <ul class="listlot"><ul class="listlot">
-                        <li><img src="//img2.baidu.com/it/u=1577766990,2229088449&fm=253&fmt=auto&app=120&f=JPEG?w=801&h=500" alt="" /><li><img src="//img2.baidu.com/it/u=1577766990,2229088449&fm=253&fmt=auto&app=120&f=JPEG?w=801&h=500" alt="" />
-                            <p class="lotname">王亿</p><p class="lotname">王亿</p>
-                        </li> </ 李 >
-                         < 李 > < 信息组 SRC = "//image.baidu.com/search/detail?ct=503316480 & z=0 & IPN=D & word=秦限 & 步骤_词= & hs=0 & pn=505 & spn=0 & di=7264239678495129601 & pi=0 & rn=1 & Tn=百度详情 & is=0%2C0 & istype=0 & ie=utf-8 & oe=utf-8 & 在= & cl=2 & lm=-1& 和;cs=41863104%2C1999975110&os=2872004837%2C1082867897&simid=3243850809%2C3834201806&adpicid=0&lpn=0&ln=1515&fr=&fmq=1705220780942_R&fm=&ic=undefined&s=undefined&hd=undefined&latest=undefined©right=undefined&se=&sme=&tab=0&width=undefined&height=undefined&face=und<li><img src="//image.baidu.com/search/detail?ct=503316480&z=0&ipn=d&word=秦限&step_word=&hs=0&pn=505&spn=0&di=7264239678495129601&pi=0&rn=1&tn=baiduimagedetail&is=0%2C0&istype=0&ie=utf-8&oe=utf-8&in=&cl=2&lm=-1&st=undefined&cs=41863104%2C1999975110&os=2872004837%2C1082867897&simid=3243850809%2C3834201806&adpicid=0&lpn=0&ln=1515&fr=&fmq=1705220780942_R&fm=&ic=undefined&s=undefined&hd=undefined&latest=undefined&copyright=undefined&se=&sme=&tab=0&width=undefined&height=undefined&face=undefinedefined&ist=&jit=&cg=&bdtype=0&oriquery=&objurl=https%3A%2F%2Fi1.hdslb.com%2Fbfs%2Farchive%2F30052383f1e77c5e2b1b9d5dcb5c799ed4d196f1.jpg&fromurl=ippr_z2C%24qAzdH3FAzdH3Fooo_z%26e3Bktstktst_z%26e3Bv54AzdH3Fet1j5AzdH3FBV8P49y8b0jY&gsm=1e0&rpstart=0&rpnum=0&islist=&querylist=&nojc=undefined&dyTabStr=MCwyLDMsMSw2LDQsNSw4LDcsOQ%3D%3D&lid=10276818179706579413" alt="" />ist=&jit=&cg=&bdtype=0&oriquery=&objurl=https%3A%2F%2Fi1.hdslb.com%2Fbfs%2Farchive%2F30052383f1e77c5e2b1b9d5dcb5c799ed4d196f1.jpg&fromurl=ippr_z2C%24qAzdH3FAzdH3Fooo_z%26e3Bktstktst_z%26e3Bv54AzdH3Fet1j5AzdH3FBV8P49y8b0jY&gsm=1e0&rpstart=0&rpnum=0&islist=&querylist=&nojc=undefined&dyTabStr=MCwyLDMsMSw2LDQsNSw4LDcsOQ%3D%3D&lid=10276818179706579413" alt="" />
-                            <p class="lotname">秦限</p><p class="lotname">秦限</p>
-                        </li></li>
-                        &l;l&t;<li>
-                            <img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot3.png" alt="" /><img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot3.png" alt="" />
-                            <p class="lotname">QBZ03-SO  兑换券</p><p class="lotname">QBZ03-SO  兑换券</p>
+                <div class="boxlottery">
+                    <ul class="listlot">
+                        <li><img src="//img2.baidu.com/it/u=1577766990,2229088449&fm=253&fmt=auto&app=120&f=JPEG?w=801&h=500" alt="" />
+                            <p class="lotname">王亿</p>
+                        </li>
+                        <li><img src="//image.baidu.com/search/detail?ct=503316480&z=0&ipn=d&word=秦限&step_word=&hs=0&pn=505&spn=0&di=7264239678495129601&pi=0&rn=1&tn=baiduimagedetail&is=0%2C0&istype=0&ie=utf-8&oe=utf-8&in=&cl=2&lm=-1&st=undefined&cs=41863104%2C1999975110&os=2872004837%2C1082867897&simid=3243850809%2C3834201806&adpicid=0&lpn=0&ln=1515&fr=&fmq=1705220780942_R&fm=&ic=undefined&s=undefined&hd=undefined&latest=undefined&copyright=undefined&se=&sme=&tab=0&width=undefined&height=undefined&face=undefined&ist=&jit=&cg=&bdtype=0&oriquery=&objurl=https%3A%2F%2Fi1.hdslb.com%2Fbfs%2Farchive%2F30052383f1e77c5e2b1b9d5dcb5c799ed4d196f1.jpg&fromurl=ippr_z2C%24qAzdH3FAzdH3Fooo_z%26e3Bktstktst_z%26e3Bv54AzdH3Fet1j5AzdH3FBV8P49y8b0jY&gsm=1e0&rpstart=0&rpnum=0&islist=&querylist=&nojc=undefined&dyTabStr=MCwyLDMsMSw2LDQsNSw4LDcsOQ%3D%3D&lid=10276818179706579413" alt="" />
+                            <p class="lotname">秦限</p>
+                        </li>
+                        <li>
+                            <img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot3.png" alt="" />
+                            <p class="lotname">QBZ03-SO  兑换券</p>
                             <span class="tagesbq tagesbq1 sp">全新首发</span>
                             <span class="tagesbq tagesbq2 sp">兑换券</span>
                         </li>
@@ -57,10 +57,10 @@
                             <img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot4.png" alt="" />
                             <p class="lotname">M200-幻神 恶人狙击枪（皮肤）</p>
                             <span class="tagesbq tagesbq1 sp">全新首发</span>
-                             < 间隔 等级 = "TagesbqTagesbq2SP" > 幻神皮肤 </ 间隔 >
-                         </ 李 >
-                         < 李 > < 信息组 SRC = "//游戏.Gtim.cn/图像/A20231130尼昂贡/l.pg"  阿尔特 = ""  />
-                             < P 等级 = "lotname" > 英雄级高级栏位通用扩展券 </ P >
+                            <span class="tagesbq tagesbq2 sp">幻神皮肤</span>
+                        </li>
+                        <li><img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot5.png" alt="" />
+                            <p class="lotname">英雄级高级栏位通用扩展券</p>
                         </li>
                         <li><img src="//game.gtimg.cn/images/actdaoju/act/a20231130nianggun/lot6.png" alt="" />
                             <p class="lotname">奖励积分*1</p>
