--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
             ['王亿', 52],
             ['秦限', 25],
             ['QBZ03-SO  兑换券', 20],
-            ['M200-幻神 恶人狙击枪（皮肤）', 15],
+            ['幻神-恶人狙击枪（皮肤）', 15],
             ['英雄级高级栏位通用扩展券', 12],
             ['Scar Light-白虎', 10],
             ['白虎-电玩粉兔（皮肤）', 8],
@@ -565,7 +565,7 @@
             ['王亿-日语语音包', 5],
             ['秦限-日语语音包', 5],
 	    ['英雄级普通栏位通用扩展券', 4],
-            ['MA41-黑骑士', 3],
+            ['M4A1-黑骑士', 3],
         ];
         var keys = 0, jf = 0, xyb = 0;
         function startDisplayX() {
@@ -855,13 +855,13 @@
             else if (id === 'btndhuanh3') { if (jf < 52) { alert('积分不足'); return; } jf -= 52; showPopup2('王亿-日语语音包', 1); }
             else if (id === 'btndhuanh4') { if (jf < 25) { alert('积分不足'); return; } jf -= 25; showPopup2('秦限-日语语音包', 1); }
             else if (id === 'btndhuanh5') { if (jf < 288) { alert('积分不足'); return; } jf -= 288; showPopup2('QBZ03-SO  兑换券', 1); }
-            else if (id === 'btndhuanh6') { if (jf < 228) { alert('积分不足'); return; } jf -= 228; showPopup2('M200-幻神 恶人狙击枪（皮肤）', 1); }
+            else if (id === 'btndhuanh6') { if (jf < 228) { alert('积分不足'); return; } jf -= 228; showPopup2('幻神-恶人狙击枪（皮肤）', 1); }
             else if (id === 'btndhuanh7') { if (jf < 168) { alert('积分不足'); return; } jf -= 168; showPopup2('英雄级高级栏位通用扩展券', 1); }
             else if (id === 'btndhuanh8') { if (jf < 108) { alert('积分不足'); return; } jf -= 108; showPopup2('Scar Light-白虎', 1); }
             else if (id === 'btndhuanh9') { if (jf < 68) { alert('积分不足'); return; } jf -= 68; showPopup2('白虎-电玩粉兔（皮肤）', 1); }
             else if (id === 'btndhuanh10') { if (jf < 58) { alert('积分不足'); return; } jf -= 58; showPopup2('黑骑士-电玩粉兔（皮肤）', 1); }
             else if (id === 'btndhuanh11') { if (jf < 48) { alert('积分不足'); return; } jf -= 48; showPopup2('英雄级普通栏位通用扩展券', 1); }
-            else if (id === 'btndhuanh12') { if (jf < 38) { alert('积分不足'); return; } jf -= 38; showPopup2('MA41-黑骑士', 1); }
+            else if (id === 'btndhuanh12') { if (jf < 38) { alert('积分不足'); return; } jf -= 38; showPopup2('M4A1-黑骑士', 1); }
             updateDisplay("jfDisplay", jf);
         }
         function showPopup2(item, op) {
@@ -886,13 +886,13 @@
                 { name: '王亿', probability: 0.05 },
                 { name: '秦限', probability: 0.05 },
                 { name: 'QBZ03-SO  兑换券', probability: 0.10 },
-                { name: 'M200-幻神 恶人狙击枪（皮肤）', probability: 0.15 },
+                { name: '幻神-恶人狙击枪（皮肤）', probability: 0.15 },
                 { name: '英雄级高级栏位通用扩展券', probability: 0.20 },
                 { name: 'Scar Light-白虎', probability: 0.30 },
                 { name: '白虎-电玩粉兔（皮肤）', probability: 0.35 },
                 { name: '黑骑士-电玩粉兔（皮肤）', probability: 0.40 },
                 { name: '英雄级普通栏位通用扩展券', probability: 0.65 },
-                { name: 'MA41-黑骑士', probability: 0.80 },
+                { name: 'M4A1-黑骑士', probability: 0.80 },
                 { name: '奖励积分*1', probability: 67.20 },
                 { name: '奖励积分*2', probability: 9.10 },
                 { name: '奖励积分*20', probability: 0.10 },
