--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
         var itemsX = [];
         const items_b = [];//看是否发送或分解 0无 1发送 2分解
         var pagesid = 1;
-        var PZX = ['王亿', '秦限', 'QBZ03-SO  兑换券', 'M200-幻神 恶人狙击枪（皮肤）', '英雄级高级栏位通用扩展券', 'Scar Light-白虎', '白虎-电玩粉兔（皮肤）', '黑骑士-电玩粉兔（皮肤）', '王亿-日语语音包', '秦限-日语语音包', '英雄级普通栏位通用扩展券', 'MA41-黑骑士'];
+        var PZX = ['王亿', '秦限', 'QBZ03-SO  兑换券', '幻神-恶人狙击枪（皮肤）', '英雄级高级栏位通用扩展券', 'Scar Light-白虎', '白虎-电玩粉兔（皮肤）', '黑骑士-电玩粉兔（皮肤）', '王亿-日语语音包', '秦限-日语语音包', '英雄级普通栏位通用扩展券', 'M4A1-黑骑士'];
         const sitem = [
             ['王亿', 52],
             ['秦限', 25],
