--- a/index.html
+++ b/index.html
@@ -898,7 +898,8 @@
                 { name: '奖励积分*20', probability: 0.10 },
                 { name: '奖励积分*100', probability: 0.05 },
                 { name: '王者之石', probability: 20.00 },
-                { name: '王亿-日语语音包', probability: 0.50 }
+                { name: '王亿-日语语音包', probability: 0.25 }
+	        { name: '秦限-日语语音包', probability: 0.25 }
             ];
 
             // 定义一个空数组，用于存储抽中的物品
